# nyc-bike-urbanflow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FRONTEND_SPEC.md  PLAN.md  PLAN_phase_1.md  POLICY_BEAD_PROGRAM.md  POLICY_WORK_PLAN.md  README.md  beads_report_nyc-bike-urbanflow_2026-01-30.md  docker-compose.yml  package.json
.beads/: beads.db  beads.db-shm  beads.db-wal  beads.left.meta.json  issues.jsonl  last-touched  sync-state.json
backend/: pyproject.toml
backend/src/api/routes/: faults.py  metrics.py  optimize.py  replay.py  simulate.py  state.py  stations.py
backend/src/api/schemas/: common.py  faults.py  metrics.py  optimize.py  replay.py  simulate.py  stations.py
backend/src/app/: deps.py  main.py
backend/src/core/: binning.py  binning_backfill.py  binning_job.py  capacity.py  distance.py  nowcast.py  reliability.py
backend/src/db/: binning_writer.py  engine.py  models.py  queries.py
backend/src/db/migrations/: README.md
backend/src/optimizer/: candidates.py  constraints.py  solver.py  tie_breakers.py
backend/src/services/: faults_service.py  metrics_service.py  optimization_service.py  replay_service.py  simulate_service.py
backend/src/simulator/: engine.py  inventory.py  scoring.py
backend/src/urbanflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_inventory_bounds.py  test_optimizer.py  test_plan_feasibility.py  test_reliability.py  test_reliability_gating.py  test_simulator.py
config/: README.md  allowlist.md  ingest_health.md  ingest_quality.md  origin_shield.md  policy_outputs.md  (+9 more)
(+170 files in other folders)
