[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urbanflow-backend"
version = "0.1.0"
description = "UrbanFlow Twin backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]
